--- a/layouts/scores/list.html
+++ b/layouts/scores/list.html
@@ -1,24 +1,29 @@
 {{- define "main"}}
-        {{ $data := .Site.Data}}
+{{ $scores := .Site.Data.scores }}
+{{ $id := (string .Params.id) }}
+{{ $category := (index .Site.Data.categoriesflat $id) }}
 <section class="section is-medium">
     <div class="container content">
-        <h1 class="title section-title">{{ .Title }}</h1>
+        <h1 class="title section-title">{{ $category.name }}</h1>
         <div class="divider mb-60"></div>
-    {{ .Content }}
+        {{ .Content }}
         <div class="columns is-multiline">
             {{ range .Pages }}
+            {{ $id := (string .Params.id )}}
+            {{ $sc := (index $scores $id ) }}
+
             <div class="column is-centered-tablet-portrait">
                 <div class="has-text-centered">
                     <canvas width="160" height="200" id="scoreView"
                             class="feature-card is-bordered has-text-centered is-centered"
                             style="height:unset;width: unset"></canvas>
                 </div>
-                {{ $sc := (index .) }}
+
                 <div class="is-centered is-centered-tablet-portrait">
                     <ul style="list-style: none; display:inline-block">
-                    <li class="is-bold" style="white-space: nowrap"><b>Arnheim Marsch</b></li>
-                    <li>Schwierigkeit: 3</li>
-                    <li>Preis: EUR 39.99,-</li>
+                        <li class="is-bold" style="white-space: nowrap"><b>{{$sc.title}}</b></li>
+                        <li>Schwierigkeit: {{$sc.difficulty}}</li>
+                        <li>Preis: EUR {{$sc.price}},-</li>
                     </ul>
                 </div>
             </div>
