--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -26,7 +26,7 @@
                     <audio controls controlsList="nodownload" style="height: 60px; width: 100%"
                            title="{{$score.title}}">
                         <source type="audio/mp3"
-                                src="{{ .Site.Params.core }}/media/audio/{{ .Params.id }}">
+                                src="{{ .Site.Params.core }}/media/score/audio/{{ .Params.id }}">
                     </audio>
                 </div>
                 <div class="card">
@@ -276,7 +276,7 @@
                         });
                     }
 
-                    var loadingTask = pdfjsLib.getDocument('{{ .Site.Params.core }}/media/pdf/{{.Params.id}}');
+                    var loadingTask = pdfjsLib.getDocument('{{ .Site.Params.core }}/media/score/pdf/{{.Params.id}}');
                     loadingTask.promise.then(function (pdf) {
                         pdfI = pdf;
                         pageRender();
